# datalad-concepts

./: .gitignore  .linkmllint.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: codespell.yml  linter.yml  model-checks.yml  sitebuild.yml  validate-examples.yaml
extra-docs/: about.md  dump-things-storage-v0.md  dump-things.md  index.md  usage-considerations.md
patches/: graphqlgen_interface_list.diff  jsonschemagen_mixins.diff  jsonschemavalidator_plainyaml.diff  linkml_generators_common_ifabsent.diff  linkml_runtime_utils_yamlutils.diff  pythongen_type_reference_order.diff  rdflib_dumper_canonical.diff  rdflib_loader_custom_types.diff  rdflib_loader_typedesignator.diff  shacl_ifabsent.diff  shaclgen_annotations.diff  shaclgen_order.diff
src/common-mixin/: unreleased.yaml
src/datalad-dataset/: unreleased.yaml
src/demo-empirical-data/: unreleased.yaml
src/demo-research-assets/: unreleased.yaml
src/demo-research-information/: unreleased.yaml
src/demo-rse-group/: unreleased.yaml
src/derived-example/: unreleased.yaml
src/distribution/: unreleased.yaml
src/distributions/: unreleased.yaml
src/edistributions/: unreleased.yaml
src/examples/: crc1451-dataset.json  datalad-dataset.yaml
src/extra-docs/: index.md
src/files-mixin/: unreleased.yaml
src/flat/: unreleased.yaml
src/flat-files/: unreleased.yaml
src/flat-prov/: unreleased.yaml
src/flat-publications/: unreleased.yaml
src/flat-resources/: unreleased.yaml
src/flat-social/: unreleased.yaml
src/flat-study/: unreleased.yaml
src/identifiers/: unreleased.yaml
src/investigation/: unreleased.yaml
src/linkml/: checksuming.yaml  checksumming.yaml  data-access-schema.yaml  datalad-dataset-graph.yaml  datalad-dataset-version-schema.yaml  datalad-datasets.yaml  datalad.yaml  datasets.yaml  git-annex.yaml  git-provenance-schema.yaml  git.yaml  identifying.yaml  labeling.yaml  meta_utils.yaml  ontology.yaml  properties.yaml  provenance.yaml  (+4 more)
tools/: patch_linkml
(+911 files in other folders)
